V4.0.0 (#236)
* add EncodingFunctionsLibrary

* work on test framework

* work on test framework

* general migration work

* playground building again

* work on proposals and editor

* cleanup content assist

* work on playground

* build cleanup

* Made LSP work and added documentation

* eclipse plugin working again

* imporive LSP, get eclipse plugin working

* Update maven.config

* work on migration to pure ANTLR infrastructure

* working on purging XText from the source tree

* engine compiles again

* fix coverage

* cleanup mvn plugin

* work on LSP

* native LSP !

* cleanup

* work on engine

* LSP fixes

* Update ComparisonOperators.java

* test  fix

* fix sonar issues

* sonar fixes

* sonar fixes

* sonar fixes

* Update JsonGraphVisualization.java

* work on tests

* work on test

* work on interpreter

* work on tests

* work on test interpreter

* Update ScenarioInterpreter.java

* minor fixes

* cleanup spring security

* Update QueryCreation.java

* fix schema validation bug

* fix coverage

* fix and consolidate subscription logic in Spring PEP

* fix IT

* Update AuthorizationSubscriptionBuilderService.java

* update headers

* rename modules

* add recovery util

* fix tracing and error recovery

* fix sonar issues

* fix sonar issues

* fix sonar issues

* fix sonar issues

* fix sonar issues

* fix sonar issues

* fix sonar issues

* Update LspWebSocketEndpoint.java

* moved benchmark project from demos to engine

* Update AuthorizationSubscription.java

* eclipse compatibility improvement

* address warnings

* fix fucntion name resolution in filters

* drafting of next compiler iteration

* update spring defaults

* work on improved compiler

* work on compiler

* Update EnvironmentAttribute.java

* add lazy evaluation and introduce stratafication of lazy evaluation

* work on compiler

* prepare for new slicing semantics

* compiler work

* more steps

* new concept: multi-strata short circuit

* Update pom.xml

* fix benchmark build

* 